        * new protocol commands to list/set (certain) server settings,
          with value sanity checking (see MogileFS::Config for which
          are settable, and with what values).  needed for "enable_rebalance".
          was partially enabled before for slave settings.  also needed
          for memcached support before, which was never possible to
          set with mogadm, only with db tweaking.

        * make mogilefsd fsck use new mogstored fid_sizes command, to
          do bulk stats.  speeds up fscks a ton.

        * be robust against system clocks that go backwards between
          gettimeofday calls:
          http://lists.danga.com/pipermail/mogilefs/2007-April/000897.html

        * Put gearman server in mogstored process, add worker
          'mogstored-fidsizes' which runs as subprocess of mogstored. Add
          side-channel command 'fid_sizes' which allows us to quickly enumerate
          and get sizes for files across entire devices on a storage node.

        * [in progress] start of removing all code like $state eq "readonly",
          and instead convert it into specific questions on policy/traits
          of given state, like $dev->should_put_new_files_on, or
          $dev->should_drain_files_off.  this will make adding 'drain' support
          in the future easier, as drain is some hybrid between current
          'readonly' and 'dead' modes.

        * start of rebalance support.  (where replication workers, in their
          idle time, can rearrange files to even out disk space and/or IO
          activity on storage nodes... policy isn't hard-coded, and is
          in fact currently random)

        * lighttpd support in both mogilefsd and mogstored.  passes test
          suite with environment MOGSTORED_SERVER_TYPE=lighttpd set now.

        * abstract out the HTTP server support in mogstored, so
          mogstored isn't just a perlbal wrapper, but an anything